Wed Oct 31 2001  Vitezslav Samel <samel@mail.cz>
	* bw.h, tty.c, configure.ac: make use of pid_t type

Mon Oct 29 2001  Vitezslav Samel <samel@mail.cz>
	*** Release joe-2.9.7-pre3 ***

Mon Oct 29 2001  Vitezslav Samel <samel@mail.cz>
	* autoconf.ac: bump pre-version number

Sun Oct 28 2001  Vitezslav Samel <samel@mail.cz>
	* autoconf.ac: remove optimizing flags from CFLAGS
	I'm aware of too much bugreports (in other projects) due to buggy code
	generated by over-optimized gcc (default '-O2 -g' is O.K. for most
	instalations - advanced user can change it by setting CFLAGS before
	running configure, he surely knows, what is he doing ;-))

Sun Oct 28 2001  Vitezslav Samel <samel@mail.cz>
	* Makefile.am, joe.spec: joe.spec deleted - I don't think it belongs
	to tar.gz package
	(to make it proper .rpm package there's more to be done - this is
	work of .rpm packager - he can insert a lot of useful but for joe
	unnecesary files - think of icons on the desktop etc.)

Sun Oct 28 2001  Vitezslav Samel <samel@mail.cz>
	* autoconf.ac: add AC_CANONICAL_(BUILD|HOST) to make
	"automake -a -c" copy necessary config.guess and config.sub files

Sun Oct 28 2001  Vitezslav Samel <samel@mail.cz>
	* files generated by automake package: use automake-1.5 to make joe
	compile on mips-sgi-irix6.5 with non-GNU make again

Sun Oct 28 2001  Jeff Downs <heydowns@users.sourceforge.net>
	* uedit.c: don't change windows when setting mark (using Esc Esc)
	in multiwindow mode (SourceForge bug #462875)

Thu Oct 25 2001  Vitezslav Samel <samel@mail.cz>
	* kbd.c, scrn.c, termcap.h, tty.c, tty.h, va.c, va.h, w.c:
	clean up warnings raised up by strict prototypes

Mon Oct 22 2001  Vitezslav Samel <samel@mail.cz>
	* configure.ac, utils.c, utils.h and new file acinclude.m4:
	makes the wordwrap work correctly again (SourceForge bugs #418871,
	#471964)

Mon Oct 22 2001  Vitezslav Samel <samel@mail.cz>
	* all *.c and *.h files, autoconf.ac: use strict prototypes
	if applicable (fairly huge change)
